--- a/plugins/rainlab/user/models/user/fields.yaml
+++ b/plugins/rainlab/user/models/user/fields.yaml
@@ -1,77 +1,71 @@
-# ===================================
-#  Field Definitions
-# ===================================
-
 fields:
-
     id:
         label: ID
-        tab: rainlab.user::lang.user.account
+        tab: 'rainlab.user::lang.user.account'
         hidden: false
-        context: [ preview ]
+        context:
+            - preview
         span: left
+        type: text
     name:
         label: სახელი
         span: auto
         type: text
-
     surname:
         label: გვარი
         span: auto
-
+        type: text
     username:
         label: მეილი/ტელეფონი
-        tab: rainlab.user::lang.user.account
+        tab: 'rainlab.user::lang.user.account'
         hidden: false
-        context: [create, preview]
+        context:
+            - create
+            - preview
         span: auto
-
+        type: text
     status_id:
         label: სტატუსი
         options:
-            - 'არააქტიური'
-            - 'აქტიური'
-            - 'გადასამოწმებელი'
+            - არააქტიური
+            - აქტიური
+            - გადასამოწმებელი
         span: auto
-        context: [preview]
+        context:
+            - preview
         type: dropdown
-
     id_number:
-        label: პირადი ნომერი
+        label: 'პირადი ნომერი'
         type: text
         span: auto
-
     user_type@create:
-        label: მომხ. ტიპი
+        label: 'მომხ. ტიპი'
         options:
-            - 'დამკვეთი'
-            - 'შემსრულებელი'
+            - დამკვეთი
+            - შემსრულებელი
         showSearch: true
         span: auto
         type: dropdown
-
     user_type@update:
-        label: მომხ. ტიპი
+        label: 'მომხ. ტიპი'
         options:
-            - 'დამკვეთი'
-            - 'შემსრულებელი'
+            - დამკვეთი
+            - შემსრულებელი
         showSearch: true
         span: auto
         type: dropdown
         disabled: true
-
     OrgLegalType:
-        label: იურიდიული სტატუსი
+        label: 'იურიდიული სტატუსი'
         nameFrom: title
         span: auto
         type: relation
-
     org_title:
         label: 'ორგანიზაციის სათაური'
         type: text
         span: auto
     org_id_number:
-        label: ორგანიზაციის საიდენტიფიკაციო ნომერი
+        label: 'ორგანიზაციის საიდენტიფიკაციო ნომერი'
         type: text
         span: auto
     Country:
@@ -88,120 +82,97 @@ fields:
         label: მისამართი
         type: text
         span: auto
-
     description:
-        label: მოკლე დახასიათება
+        label: 'მოკლე დახასიათება'
         span: auto
         type: textarea
-
     comment:
-        label: 'კომენტარი'
+        label: კომენტარი
         span: auto
         type: textarea
-
 tabs:
     fields:
         bank_account_number:
-            label: ანგარიშის ნომერი
-            tab: rainlab.user::lang.user.account
+            label: 'ანგარიშის ნომერი'
+            tab: 'rainlab.user::lang.user.account'
             span: left
+            type: text
         balance:
             label: ბალანსი
-            tab: rainlab.user::lang.user.account
             span: left
-
+            default: '0'
+            type: number
+            tab: 'rainlab.user::lang.user.account'
         app_commission_percent:
-            label: ინდივიდუალური საკომისიო %
-            tab: rainlab.user::lang.user.account
+            label: 'ინდივიდუალური საკომისიო %'
+            tab: 'rainlab.user::lang.user.account'
             span: left
             comment: 'ეხება მხოლოდ შემსრულებლებს'
-
+            type: text
         commission_free_till:
-            label: 0% საკომისიოს გასვლის თარიღი
+            label: '0% საკომისიოს გასვლის თარიღი'
             format: d-m-Y
             type: datepicker
-            tab: rainlab.user::lang.user.account
+            tab: 'rainlab.user::lang.user.account'
             span: left
             comment: 'ეხება მხოლოდ შემსრულებლებს'
-
         is_certified:
             label: სერტიფიცირებულია
-            tab: rainlab.user::lang.user.account
+            tab: 'rainlab.user::lang.user.account'
             span: left
             type: switch
-
         is_unactive:
             label: არააქტიურია
-            tab: rainlab.user::lang.user.account
+            tab: 'rainlab.user::lang.user.account'
             span: left
             type: switch
-            comment: გაითვალისწინეთ რომ არააქტიური სტატუსის მოსახსნელად საჭიროა რომ მომხმარებლის ბალანსი იყოს დადებითი
-
+            comment: 'გაითვალისწინეთ რომ არააქტიური სტატუსის მოსახსნელად საჭიროა რომ მომხმარებლის ბალანსი იყოს დადებითი'
         is_busy:
             label: დაკავებულია
-            tab: rainlab.user::lang.user.account
+            tab: 'rainlab.user::lang.user.account'
             span: left
             type: switch
-
         password@create:
             label: პაროლი
-            comment: შეიყვანეთ პაროლი
-            tab: rainlab.user::lang.user.account
+            comment: 'შეიყვანეთ პაროლი'
+            tab: 'rainlab.user::lang.user.account'
             type: password
             span: left
-
         password@update:
-            label: პაროლის შეცვლა
-            comment: პაროლის შესაცვლელად, შეიყვანეთ ახალი პაროლი
-            tab: rainlab.user::lang.user.account
+            label: 'პაროლის შეცვლა'
+            comment: 'პაროლის შესაცვლელად, შეიყვანეთ ახალი პაროლი'
+            tab: 'rainlab.user::lang.user.account'
             type: password
             span: left
-
         password_confirmation:
-            label: გაიმეორეთ პაროლი
-            comment: პაროლის დასაფიქსირებლად გაიმეორეთ პაროლი
-            tab: rainlab.user::lang.user.account
+            label: 'გაიმეორეთ პაროლი'
+            comment: 'პაროლის დასაფიქსირებლად გაიმეორეთ პაროლი'
+            tab: 'rainlab.user::lang.user.account'
             type: password
             span: right
-            context: [create, update]
-
-
-
-#        created_ip_address:
-#            label: rainlab.user::lang.user.created_ip_address
-#            span: auto
-#            disabled: true
-#            tab: rainlab.user::lang.user.account
-#            context: preview
-#
-#        last_ip_address:
-#            label: rainlab.user::lang.user.last_ip_address
-#            span: auto
-#            disabled: true
-#            tab: rainlab.user::lang.user.account
-#            context: preview
-
+            context:
+                - create
+                - update
 secondaryTabs:
     fields:
-
         avatar:
             label: ავატარი
             type: fileupload
             mode: image
             imageHeight: 260
             imageWidth: 260
-
+            tab: Misc
         id_card:
-            label: პირადობის წინა და უკანა მხარე
+            label: 'პირადობის წინა და უკანა მხარე'
             type: fileupload
             mode: image
             imageHeight: 260
             imageWidth: 260
-
+            tab: Misc
         gallery:
             label: გალერეა
             type: fileupload
             mode: image
             imageHeight: 260
             imageWidth: 260
-
+            tab: Misc
