--- a/plugins/skillset/orders/controllers/orders/config_relation.yaml
+++ b/plugins/skillset/orders/controllers/orders/config_relation.yaml
@@ -15,3 +15,12 @@ ordersServicesTmp:
     showCheckboxes: false
   manage:
     form: $/skillset/orders/models/orderservice/fields.yaml
+
+orderRate:
+  label: 'შეკვეთის შეფასებები'
+  view:
+    list: $/skillset/rating/models/rating/columns.yaml
+    toolbarButtons: true
+    showCheckboxes: true
+  manage:
+    form: $/skillset/rating/models/rating/fields.yaml
