--- a/plugins/skillset/jobs/controllers/orders/config_relation.yaml
+++ b/plugins/skillset/jobs/controllers/orders/config_relation.yaml
@@ -15,3 +15,11 @@ offerServices:
     showCheckboxes: false
   manage:
     form: $/skillset/jobs/models/service/fields.yaml
+orderRate:
+  label: 'შეკვეთის შეფასებები'
+  view:
+    list: $/skillset/rating/models/rating/columns.yaml
+    toolbarButtons: true
+    showCheckboxes: true
+  manage:
+    form: $/skillset/rating/models/rating/fields.yaml
