added search on offers, orders and payments

--- a/plugins/skillset/offers/models/offer/columns.yaml
+++ b/plugins/skillset/offers/models/offer/columns.yaml
@@ -22,3 +22,13 @@ columns:
         label: 'წაუკითხავი შეტყობინება'
         type: special_unread
         sortable: false
+    comment:
+        label: კომენტარი
+        type: text
+        searchable: true
+        invisible: true
+    custom_client_phone:
+        label: 'კლიენტის ნომერი'
+        type: text
+        searchable: true
+        invisible: true
