--- a/plugins/skillset/offers/updates/version.yaml
+++ b/plugins/skillset/offers/updates/version.yaml
@@ -75,3 +75,6 @@
 1.0.26:
     - 'Updated table skillset_offers_'
     - builder_table_update_skillset_offers__5.php
+1.0.27:
+    - 'Updated table skillset_offers_'
+    - builder_table_update_skillset_offers__21.php
